# Copyright (C) 2008, 2012 Ales Snuparek
#
# This file is part of ZFS build system.

add_subdirectory(node)
add_subdirectory(cap)
add_subdirectory(dir)
add_subdirectory(file)
add_subdirectory(handle)
add_subdirectory(hardlink)
add_subdirectory(journal)
add_subdirectory(metadata)
add_subdirectory(volume)
