add_subdirectory(crc32)
add_subdirectory(md5)
add_subdirectory(alloc-pool)
add_subdirectory(memory)
add_subdirectory(varray)
add_subdirectory(log)
add_subdirectory(constant)
add_subdirectory(fibheap)

if (HAVE_FUSE)
	add_subdirectory(fuse_iface)
	add_subdirectory(dokan_iface/tests)
elseif (HAVE_DOKAN)
	add_subdirectory(dokan_iface)
endif()

add_subdirectory(hashfile)
add_subdirectory(hashtab)
add_subdirectory(interval-tree)
add_subdirectory(network)
add_subdirectory(protocol)
add_subdirectory(queue)
add_subdirectory(random)
add_subdirectory(semaphore)
add_subdirectory(splay-tree)
add_subdirectory(threading)
add_subdirectory(util)
add_subdirectory(zfsio)
add_subdirectory(zfs_dirent)
